--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-sacle=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>POKEDEX</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Hey hola!</h1>
+        <h1>POKEDEX</h1>
+
+        <main>
+            <section class="btns-cont">
+                <button data-filter=".type-fire">Fuego</button>
+                <button data-filter=".type-water">Agua</button>
+                <button data-filter=".type-grass">Planta</button>
+            </section>
+
+            <section class="poke-cont">
+                <div class="card type-fire">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png" alt="">
+                    <p class="number">4</p>
+                    <h2 class="name">Charmander</h2>
+                    <p>Tipo: Fuego</p>
+                </div>
+                <div class="card type-water">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png" alt="">
+                    <p class="number">7</p>
+                    <h2 class="name">Squirtle</h2>
+                    <p>Tipo: Agua</p>
+                </div>
+                <div class="card type-grass">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" alt="">
+                    <p class="number">1</p>
+                    <h2 class="name">Bulbasaur</h2>
+                    <p>Tipo: Planta</p>
+                </div>
+            </section>
+        </main>
+
+        <!-- JQUERY -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- ISOTOPE -->
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+        <!-- JAVASCRIPT -->
+         <script src="js/script.js"></script>
     </body>
 </html>
