--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
         <main>
             <section class="btns-cont">
-                <button data-filter=".type-fire">Fuego</button>
-                <button data-filter=".type-water">Agua</button>
-                <button data-filter=".type-grass">Planta</button>
+                <button class="filter" data-filter="*">Todos</button>
+                <button class="filter" data-filter=".type-fire">Fuego</button>
+                <button class="filter" data-filter=".type-water">Agua</button>
+                <button class="filter" data-filter=".type-grass">Planta</button>
+                <button class="filter" data-filter=".type-electric">Eléctrico</button>
+                <button class="sort" data-sortby="number">Ordenar por número</button>
+                <button class="sort" data-sortby="name">Ordenar A-Z</button>
             </section>
 
             <section class="poke-cont">
@@ -34,6 +38,12 @@
                     <p class="number">1</p>
                     <h2 class="name">Bulbasaur</h2>
                     <p>Tipo: Planta</p>
+                </div>
+                <div class="card type-electric">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" alt="">
+                    <p class="number">25</p>
+                    <h2 class="name">Pikachu</h2>
+                    <p>Tipo: Eléctrico</p>
                 </div>
             </section>
         </main>
