--- a/pikachu.html
+++ b/pikachu.html
@@ -5,11 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>POKEDEX | PIKACHU</title>
         <link rel="stylesheet" href="css/style.css">
+
+        <!-- MODEL VIEWER -->
+        <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
     </head>
     <body>
         <div id="loader">
             <div class="loader-content">
-                <div class="loader-text"></div>
+                <div class="loader-text">
+                    <span>Loading...</span>
+                    <span class="percentage">0%</span>
+                </div>
             </div>
         </div>
 
@@ -18,9 +24,14 @@
         <h1>Pikachu</h1>
         <P>Pokémon eléctrico y amigo de Ash</P>
         <small>Con la pantalla de carga permitimos que el contenido más pesado del HTML se cargue completamente</small>
-        <img src="" alt="Pikachu">
+        <!-- <img src="media/images/Pikachu-25.png" alt="Pikachu"> -->
+        <model-viewer id="model" alt="Pikachu" src="media/models/detective_pikachu.glb" poster="media/images/Pikachu-25.png" loading="eager" camera-controls touch-action="pan-y"></model-viewer>
+
+        </div>
 
         <!-- JQUERY -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- JAVASCRIPT -->
+        <script src="js/loader.js"></script>
     </body>
 </html>
