--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>POKEDEX</title>
+
         <!-- CSS Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
         <!-- BS ICONS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        
         <!-- CSS PROPIO (debe cargarse después de BootStrap para que sobrescriba) -->
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -25,40 +28,31 @@
                 <button class="sort" data-sortby="name">Ordenar A-Z</button>
             </section>
 
-            <section class="poke-cont container my-5 row g-3">
-                <div class="card type-fire col-6 col-md-4 col-lg-3 card-body">
+            <section class="container my-5 row g-3">
+                <div id="pokeCont" class="row">
+
+                </div>
+                <!-- <div class="card type-fire col-6 col-md-4 col-lg-3 card-body">
                     <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/4.png" class="card-img-top img-fluid" alt="">
                     <p class="number">4</p>
                     <h2 class="name card-title">Charmander</h2>
                     <p class="card-text">Tipo: Fuego</p>
-                </div>
-                <div class="card type-water col-6 col-md-4 col-lg-3 card-body">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png" class="card-img-top img-fluid" alt="">
-                    <p class="number">7</p>
-                    <h2 class="name card-title">Squirtle</h2>
-                    <p class="card-text">Tipo: Agua</p>
-                </div>
-                <div class="card type-grass col-6 col-md-4 col-lg-3 card-body">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" class="card-img-top img-fluid" alt="">
-                    <p class="number">1</p>
-                    <h2 class="name card-title">Bulbasaur</h2>
-                    <p class="card-text">Tipo: Planta</p>
-                </div>
-                <div class="card type-electric col-6 col-md-4 col-lg-3 card-body">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" class="card-img-top img-fluid" alt="">
-                    <p class="number">25</p>
-                    <h2 class="name card-title">Pikachu</h2>
-                    <p class="card-text">Tipo: Eléctrico</p>
-                </div>
+                </div> -->
             </section>
         </main>
 
         <!-- JQUERY -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
         <!-- ISOTOPE -->
         <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+
+        <!-- API CALL SCRIPT -->
+         <script src="js/listPokemon.js"></script>
+
         <!-- JAVASCRIPT -->
          <script src="js/script.js"></script>
+
          <!-- JS Bootstrap (opcional, solo si usas componentes JS) -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     </body>
