--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button class="sort" data-sortby="name">Ordenar A-Z</button>
             </section>
 
-            <section class="poke-cont">
+            <section class="poke-cont container my-5 row g-3">
                 <div id="pokeCont" class="row">
 
                 </div>
